<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moonwalk</string>
    <string name="action_settings">Settings</string>
    <string name="no_notes">No Goals</string>
    <string name="menu_insert">Add Goal</string>
    <string name="menu_delete">Abandon Goal</string>
    <string name="title_activity_edit_goal">Edit Goal</string>

    <string-array name="measurement_array">
        <item>@string/unitStep</item>
        <item>@string/unitMetre</item>
        <item>@string/unitKilometre</item>
        <item>@string/unitFeet</item>
        <item>@string/unitMile</item>
    </string-array>

    <string-array name="measurement_array_calorie">
        <item>@string/unitStep</item>
        <item>@string/unitMetre</item>
        <item>@string/unitKilometre</item>
        <item>@string/unitFeet</item>
        <item>@string/unitMile</item>
        <item>@string/unitCalorie</item>
    </string-array>

    <string name="unitStep">Steps</string>
    <string name="unitMile">Miles</string>
    <string name="unitMetre">Metres</string>
    <string name="unitKilometre">Kilometres</string>
    <string name="unitFeet">Feet</string>
    <string name="unitCalorie">Calories</string>

    <string name="title_section1">Active Goals</string>
    <string name="title_section4">All Goals</string>
    <string name="title_section2">Activities</string>
    <string name="title_section3">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Log Activity</string>
    <string name="title_activity_moonwalk_drawer">Moonwalk</string>
    <string name="title_activity_edit">Edit Activity</string>
    <string name="title_activity_goal_view">GoalView</string>
    <string name="title_activity_test_operations">TestOperations</string>
    <string name="title_activity_goal_details">Goal</string>
    <string name="title_activity_goal_history">Goal History</string>
    <string name="title_activity_map_distance">Map</string>
    <string name="facebook_app_id">825438540874180</string>
    <string name="title_activity_steps_tracker">Steps Tracker Activity</string>


    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="string_climbed">Climbed</string>
    <string name="hint_distance_achieved">Distance Achieved</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_confirm">Confirm</string>
    <string name="hint_goal_name">Goal Name</string>
    <string name="string_start">Start:</string>
    <string name="string_end">End:</string>
    <string name="string_goal_map">Select Goal From Map</string>
    <string name="string_goal_custom">Select Distance Goal</string>
    <string name="string_goal_type">Goal Type</string>
    <string name="hint_walking_target">Walking Target</string>
    <string name="hint_climbing_target">Climbing Target</string>
    <string name="title_activity_treat">Select Treat</string>
    <string name="title_activity_create_treat">CreateTreat</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_challenge_view">Challenge</string>


</resources>
