<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/typeSwitch"
        android:textOn="Climbed"
        android:textOff="Walked"
        android:thumb="@drawable/curved_rectangle"
        android:layout_gravity="center"
        android:thumbTextPadding="35dp"
        android:switchTextAppearance="@style/SwitchTextAppearance"
        android:onClick="updateDropdown" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height">

        <EditText
            android:layout_width="0dp"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:inputType="number"
            android:id="@+id/numberOf"
            android:layout_weight="2"
            android:hint="@string/hint_distance_achieved"
            android:textColorHint="#88999999"
            android:textColor="#ff999999" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:clickable="true"
                android:gravity="center"
                android:popupBackground="#00000000"/>


        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/numberSteps"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="#ff999999" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:text="Start Step Detection"
        android:id="@+id/stepButton"
        android:onClick="stepDetection"
        android:background="@drawable/curved_rectangle"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#ff333333"
        android:clickable="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/spinnerGoals"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dialog"
        android:background="@drawable/curved_rectangle"
        android:textColor="@color/dark_space_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_cancel"
            android:id="@+id/cancel"
            android:onClick="cancelGoal"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="0dp"
            android:textColor="#ff333333"
            android:clickable="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_confirm"
            android:id="@+id/confirm"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="#ff333333"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>